tree-sitter-gqlt/corpus/query.txt
===
GraphQL Query
===

query GetPeople($me: String!, $you: String!) {
  getMe: getPerson(id: $me) {
    username
    contact {
      email
    }
  }
  getPerson(id: $you) {
    ... on User {
      username
      password
    }
    ... on Contact {
      ...ContactFragment
    }
  }
}

mutation CreatePerson($input: CreatePerson) {
  createPerson(input: $input) {
    username
    password
  }
}

subscription {
  subscribeToNotification(id: "12345") {
    username
    notification {
      content
      timestamp
    }
  }
}

fragment ContactFragment on Contact {
  name
  contact {
    email
  }
}

---

(source_file
  (document
    (definition
      (executable_definition
        (operation_definition
          (operation_type)
          (name)
          (variable_definitions
            (variable_definition
              (variable
                (name))
              (type
                (non_null_type
                  (named_type
                    (name))))
              (comma))
            (variable_definition
              (variable
                (name))
              (type
                (non_null_type
                  (named_type
                    (name))))))
          (selection_set
            (selection
              (field
                (alias
                  (name))
                (name)
                (arguments
                  (argument
                    (name)
                    (value
                      (variable
                        (name)))))
                (selection_set
                  (selection
                    (field
                      (name)))
                  (selection
                    (field
                      (name)
                      (selection_set
                        (selection
                          (field
                            (name)))))))))
            (selection
              (field
                (name)
                (arguments
                  (argument
                    (name)
                    (value
                      (variable
                        (name)))))
                (selection_set
                  (selection
                    (inline_fragment
                      (type_condition
                        (named_type
                          (name)))
                      (selection_set
                        (selection
                          (field
                            (name)))
                        (selection
                          (field
                            (name))))))
                  (selection
                    (inline_fragment
                      (type_condition
                        (named_type
                          (name)))
                      (selection_set
                        (selection
                          (fragment_spread
                            (fragment_name
                              (name))))))))))))))
    (definition
      (executable_definition
        (operation_definition
          (operation_type)
          (name)
          (variable_definitions
            (variable_definition
              (variable
                (name))
              (type
                (named_type
                  (name)))))
          (selection_set
            (selection
              (field
                (name)
                (arguments
                  (argument
                    (name)
                    (value
                      (variable
                        (name)))))
                (selection_set
                  (selection
                    (field
                      (name)))
                  (selection
                    (field
                      (name))))))))))
    (definition
      (executable_definition
        (operation_definition
          (operation_type)
          (selection_set
            (selection
              (field
                (name)
                (arguments
                  (argument
                    (name)
                    (value
                      (string_value))))
                (selection_set
                  (selection
                    (field
                      (name)))
                  (selection
                    (field
                      (name)
                      (selection_set
                        (selection
                          (field
                            (name)))
                        (selection
                          (field
                            (name)))))))))))))
    (definition
      (executable_definition
        (fragment_definition
          (fragment_name
            (name))
          (type_condition
            (named_type
              (name)))
          (selection_set
            (selection
              (field
                (name)))
            (selection
              (field
                (name)
                (selection_set
                  (selection
                    (field
                      (name))))))))))))
